--- a/user__profile.html
+++ b/user__profile.html
@@ -29,7 +29,8 @@
             <nav class="header__right__navigation">
                 <div>Support</div>
             </nav>
-            <button type="button" class="header__right__button" id="header__button" onclick="loginButton()">LOGIN</button>
+            <button type="button" class="header__right__button" id="header__button"
+                onclick="loginButton()">LOGIN</button>
         </div>
         <div class="login" id="login">
             <form action="" class="login__form" id="login__form">
@@ -40,7 +41,8 @@
                     <div class="login__form__authentication__uerror"></div>
                 </div>
                 <div class="login__form__authentication">
-                    <input type="password" class="login__form__authentication__input" id="Password" placeholder="Password">
+                    <input type="password" class="login__form__authentication__input" id="Password"
+                        placeholder="Password">
                     <div class="login__form__authentication__perror"></div>
                 </div>
                 <button class="login__button" id="login__button" onclick="loginSuccess()">login</button>
@@ -48,7 +50,8 @@
             <div class="login__success" id="login__success">
                 <img src="tick__image.jpg" class="login__success__image">
                 <div class="login__success__message"><b>Successfully logged in. Now close this window</b></div>
-                <img src="wrong__image.png" class="login__success__cross" id="login__success__cross" onclick="loginSuccessCancel()">
+                <img src="wrong__image.png" class="login__success__cross" id="login__success__cross"
+                    onclick="loginSuccessCancel()">
             </div>
         </div>
     </header>
@@ -59,19 +62,25 @@
         <div class="maincontainer__middle" id="maincontainer__middle">
             <div class="maincontainer__middle__form">
                 <img src="search__image.png" class="form__searchimg">
-                <input type="text" placeholder="Search profiles..." class="form__search" id="form__search" onkeyup="profileSearch()">
-                <button class="form__button" id="addNewButton" onclick="addNew()">+ Add New</button>
+                <input type="text" placeholder="Search profiles..." class="form__search" id="form__search"
+                    onkeyup="profileSearch()">
+                <button class="form__button" id="addNewButton" onclick="fullForm(this)">+ Add New</button>
             </div>
         </div>
         <form class="addNewForm" id="addNewForm">
             <div class="addNewForm__popup" id="addNewForm__popup">
                 <img src="addnew__image.png" class="addNewForm__popup__image" id="addNewForm__popup__image">
-                <img src="wrong__image.png" class="addNewForm__popup__wrong" id="addNewForm__popup__wrong" onclick="addNewCancel()">
-                <input type="url" class="addNewForm__popup__entries" placeholder="Image__URL" id="addNewForm__popup__url">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Username" id="addNewForm__popup__name">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Country" id="addNewForm__popup__country">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Ratings" id="addNewForm__popup__rating">
-                <button class="addNewForm__popup__button" id="addNew__members" onclick="addNewMember()">Add Member</button> 
+                <img src="wrong__image.png" class="addNewForm__popup__wrong" id="addNewForm__popup__wrong"
+                    onclick="addNewCancel()">
+                <input type="text" class="addNewForm__popup__entries" placeholder="Image__URL"
+                    id="addNewForm__popup__url">
+                <input type="text" class="addNewForm__popup__entries" placeholder="Username"
+                    id="addNewForm__popup__name">
+                <input type="text" class="addNewForm__popup__entries" placeholder="Country"
+                    id="addNewForm__popup__country">
+                <input type="text" class="addNewForm__popup__entries" placeholder="Ratings"
+                    id="addNewForm__popup__rating">
+                <button class="addNewForm__popup__button" id="addNew__members" onclick="finishButton()">Finish</button>
             </div>
         </form>
         <div class="maincontainer__bottom">
