--- a/user__profile.html
+++ b/user__profile.html
@@ -72,13 +72,13 @@
                 <img src="addnew__image.png" class="addNewForm__popup__image" id="addNewForm__popup__image">
                 <img src="wrong__image.png" class="addNewForm__popup__wrong" id="addNewForm__popup__wrong"
                     onclick="addNewCancel()">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Image__URL"
+                <input type="text" class="addNewForm__popup__entries" placeholder="Image__URL.."
                     id="addNewForm__popup__url">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Username"
+                <input type="text" class="addNewForm__popup__entries" placeholder="Username.."
                     id="addNewForm__popup__name">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Country"
+                <input type="text" class="addNewForm__popup__entries" placeholder="Country.."
                     id="addNewForm__popup__country">
-                <input type="text" class="addNewForm__popup__entries" placeholder="Ratings"
+                <input type="text" class="addNewForm__popup__entries" placeholder="Ratings.."
                     id="addNewForm__popup__rating">
                 <button class="addNewForm__popup__button" id="addNew__members" onclick="finishButton()">Finish</button>
             </div>
